--- a/.github/workflows/my-first-workflow.yml
+++ b/.github/workflows/my-first-workflow.yml
@@ -1,18 +1,26 @@
 name: My first workflow
 
 on:
-  workflow_dispatch:
   push:
+    branches: [ main ]
+    paths-ignore: [.github/**]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '15 6 * * 0'
+  workflow_dispatch:
 
 jobs:
-  first_job: 
-    runs-on: ubuntu_latest
+  Build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-        with: 
-          fetch-depth: 0
-        env: 
-          GIT_LOG: debug
       - run: |
-            echo "YeY My first WorkFlow!"
+          echo "🎉 The job was triggered by event: ${{ github.event_name }}"
+          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ."
+
+      - uses: actions/checkout@v3.3.0
+
+      - name: List files in the repository
+        run: |
+          echo "The repository ${{ github.repository }} contains the following files:"
+          tree
