--- a/.github/workflows/my-first-workflow.yml
+++ b/.github/workflows/my-first-workflow.yml
@@ -24,3 +24,46 @@ jobs:
         run: |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: |
+          echo "Hi there just testing..."
+          
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: |
+          echo "Hi there just testing..."
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "This is Step 1..."
+          sleep 10
+      - run: |
+          echo "This is Step 2..."
+          sleep 10
+      - run: |
+          echo "This is Step 3..."
+          sleep 10
+      - run: |
+          echo "This is Step 4..."
+          sleep 10
+      - run: |
+          echo "This is Step 5..."
+          sleep 10
+      
